<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="fragment_stub_text_view_text">Stub</string>
    <string name="fragment_search_search_bar_hint">Должность, ключевые слова</string>
    <string name="fragment_search_search_bar_hint_after_click">Должность по подходящим вакансиям</string>
    <string name="fragment_search_ic_search_settings_desc">Search settings button</string>
    <string name="fragment_search_recycler_view_text_view_text">Вакансии для вас</string>
    <string name="fragment_search_count_vacancies_text_view_text">Number of jobs</string>
    <string name="fragment_search_count_vacancies_match_text_view_text">По соответствию</string>
    <string name="fragment_search_count_vacancies_image_view">Icon for job sorting</string>
    <string name="fragment_search_recycler_view_more_vacancies_button_text">More jobs</string>
    <string name="offer_item_boost_resume_text_view_text">Boost resume in search</string>
    <string name="offer_item_up_resume_text_view_text">Up resume</string>
    <string name="vacancy_item_text_view_count_views_text">Currently being viewed by n people</string>
    <string name="vacancy_item_vacancy_name_text_view_text">UI/UX Designer</string>
    <string name="vacancy_item_city_text_view_text">City</string>
    <string name="vacancy_item_company_name_text_view_text">Company</string>
    <string name="vacancy_item_experience_text_view_text">Experience</string>
    <string name="vacancy_item_date_text_view_text">Publication date</string>
    <string name="vacancy_item_apply_button_text">Откликнуться</string>
    <string name="fragment_favorites_title">Избранное</string>
    <string name="fragment_favorites_count_vacancies_text_view_text">n вакансий</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offer_item_image_view_icon_description">offer item image icon</string>
    <array name="lookingNumber">
        <item>Сейчас просматривает</item>
        <item>человек</item>
        <item>человека</item>
    </array>
    <string name="published">Опубликовано</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_favorites">Избранное</string>
    <string name="menu_responses">Отклики</string>
    <string name="menu_messages">Сообщения</string>
    <string name="menu_profile">Профиль</string>
    <string name="fragment_search_recommendation_text_view">Поднять резюме в поиске</string>
    <string name="recommendation_item_button_text">Поднять</string>
    <array name="more_vacancies_text">
        <item>Еще</item>
        <item>вакансия</item>
        <item>вакансии</item>
        <item>вакансий</item>
    </array>


</resources>