<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/searchFragment"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search"
        />

    <item
        android:id="@+id/favoritesFragment"
        android:title="@string/menu_favorites"
        android:icon="@drawable/ic_favorites"/>

    <item
        android:id="@+id/responsesFragment"
        android:title="@string/menu_responses"
        android:icon="@drawable/ic_responses" />

    <item
        android:id="@+id/messagesFragment"
        android:title="@string/menu_messages"
        android:icon="@drawable/ic_messages"/>

    <item
        android:id="@+id/profileFragment"
        android:title="@string/menu_profile"
        android:icon="@drawable/ic_profile" />

</menu>