<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_vacancies_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:clickable="false"
        android:focusable="false"
        android:hint="@string/item_vacancies_search_bar_hint_after_click"
        android:textColorHint="@color/grey_3"
        app:boxStrokeColor="@android:color/transparent"
        app:helperTextEnabled="false"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_back"
        app:startIconTint="@color/grey_3">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/search_background"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="@dimen/fragment_search_text_input_layout_image_button_width"
        android:layout_height="@dimen/fragment_search_text_input_layout_image_button_height"
        android:layout_marginTop="5dp"
        android:background="@drawable/search_background"
        android:contentDescription="@string/fragment_search_ic_search_settings_desc"
        android:src="@drawable/ic_search_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_vacancies_count_vacancies_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingTop="16dp"
        android:text="@string/fragment_search_count_vacancies_text_view_text"
        android:textColor="@color/white"
        android:textSize="@dimen/fragment_search_count_vacancies_text_view_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_vacancies_text_input_layout"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_search_count_vacancies_match_text_view_text"
        android:paddingTop="16dp"
        android:textColor="@color/blue"
        android:textSize="@dimen/fragment_search_count_vacancies_match_text_view_text_size"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintEnd_toStartOf="@+id/item_vacancies_image_view"/>

    <ImageView
        android:id="@+id/item_vacancies_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:src="@drawable/ic_sort"
        android:contentDescription="@string/fragment_search_count_vacancies_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_vacancies_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="24dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_vacancies_count_vacancies_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>